# helaicopter

./: .gitignore  .mintignore  .prefectignore  AGENTS.md  README.md  alembic.ini  capacitor.config.ts  eslint.config.mjs  mint.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: backend-quality.yml
.oats/: config.toml
Formula/: helaicopter.rb
docs/: clickhouse-kappa-architecture.md  clickhouse-schema.md  core-concepts.mdx  documentation-framework-research.md  fastapi-backend-rollout.md  frontend-consistency-audit.md  go-live-ingestion.md  index.mdx  mint.json  oats-prefect-cutover.md  prefect-local-ops.md  python-backend-type-system-baseline.md  routes-and-data-model-audit.md
docs/api/: endpoints.mdx  openapi-artifacts.mdx  overview.mdx
docs/architecture/: components.mdx  overview.mdx  repo-layers.mdx
docs/codex-rollout/: README.md  ticket-01-backend-abstractions.md  ticket-02-clickhouse-schema.md  ticket-03-historical-backfill.md  ticket-04-clickhouse-analytics-serving.md  ticket-05-go-live-ingestion.md  ticket-06-ui-streaming.md  ticket-07-unified-conversation-serving.md  ticket-08-retire-duckdb-olap.md
docs/data/: databases-and-caches.mdx
docs/frontend/: consistency.mdx
docs/guides/: analytics.mdx  browsing-conversations.mdx  evaluations.mdx  getting-started.mdx  iphone-dev-mode.md  orchestration.mdx
docs/orchestration/: bootstrap.md  oats.mdx  overview.mdx  prefect.mdx  smoke-scenarios.md
docs/plans/: fastapi_backend_migration_plan.md
examples/: cleanup.md  dummy_automerge_run.md  fastapi_backend_rollout.md  full_program_authoritative_analytics_overnight_run.md  mobile_interface_masterplan_run.md  prefect_native_oats_orchestration_run.md  sample_run.md  yawt_backlog_run.md
go/live-ingestion/: go.mod
ops/prefect/: .env.example  docker-compose.yml
scripts/: bootstrap-clickhouse-local.sh  dev-instance.mjs  dev-instance.test.mjs  dev.mjs  export-parsed-data.ts  generate-openapi-artifacts.py  run-codex-rollout.sh
tests/: test_analytics_core.py  test_analytics_edge_cases.py  test_api_analytics.py  test_api_analytics_empty.py  test_api_auth_credentials.py  test_api_bootstrap.py  test_api_conversations.py  test_api_database.py  test_api_dispatch.py  test_api_evaluation_prompts.py  test_api_evaluations.py  test_api_mcp.py  test_api_operator_bootstrap.py  test_api_operator_controls.py  test_api_orchestration.py  test_api_plans.py  test_api_prefect_orchestration.py  test_api_provider_readiness.py  test_api_runtime_materialization.py  test_api_smoke.py  test_api_subscriptions.py  test_api_worker_session_controls.py  test_api_workers.py  test_backend_settings.py  test_backend_type_system_rollout.py  test_claude_fs_adapters.py  test_cli_runtime.py  test_conversation_dag_pure.py  test_conversation_refs.py  test_end_to_end_smoke.py  test_export_pipeline.py  test_export_types.py  test_frontend_backend_split.py  test_homebrew_launcher.py  test_oauth_flow.py  test_orchestration_analytics.py  test_parser.py  test_permanent_loop_integration.py  test_pricing_compat.py  test_provider_readiness.py  (+8 more)
(+708 files in other folders)
