[project]
name = "helaicopter-db"
version = "0.1.0"
description = "Database refresh pipeline for Helaicopter"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.14.1",
  "duckdb>=1.4.0",
  "duckdb-engine>=0.17.0",
  "fastapi>=0.115.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.6.0",
  "rich>=13.7.0",
  "sqlalchemy>=2.0.38",
  "typer>=0.12.3",
  "uvicorn>=0.34.0",
]

[project.scripts]
oats = "oats.cli:app"

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "pyright>=1.1.390",
  "pytest>=8.0.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["setuptools>=75.8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
include = [
  "python/helaicopter_api/server",
  "python/helaicopter_api/schema",
  "python/helaicopter_api/ports",
  "python/oats/models.py",
]
executionEnvironments = [
  { root = ".", extraPaths = ["python"] },
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["python", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.uv]
package = true
